<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick connect</string>
    <string name="title_shell_fragment">Shell</string>
    <string name="title_connection_fragment">Quick Connect</string>
    <string name="title_hosts_fragment">Hosts</string>
    <string name="action_settings">Settings</string>
    <string name="title_key_manager_fragment">Key Manager</string>
    
    
    <!-- activity_main strings -->
    <string name="enter_username_hint">Username</string>
    <string name="enter_password_hint">Password</string>
    <string name="enter_port_hint">Port</string>
    <string name="connect_server_button_text">Connect</string>
    
    <!-- activity_shell strings -->
    <string name="send_message_hint">Enter command</string>
    <string name="send_message_button_text">Send</string>
    <string name="send_ctrlc_button_text">^C</string>
    
    <!-- Fragment add_host strings -->
    <string name="add_host_button_text">Save</string>
    <string name="connect_host_button_text">Connect</string>
    <string name="edit_host_button_text">Edit</string>
    <string name="enter_hostname_hint">Host Address</string>
    <string name="enter_servername_hint">Servername</string>
    

    
    <string name="drawer_item_desc">Item</string>
    
    <string name="hosts_add_title">Add</string>
    

</resources>
