<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".QuickConnectActivity" >

    <EditText
        android:id="@+id/add_host_enter_servername_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/text_design"
        android:hint="@string/enter_servername_hint"
        android:minHeight="50dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green" />

    <EditText
        android:id="@+id/add_host_enter_username_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/text_design"
        android:hint="@string/enter_username_hint"
        android:minHeight="50dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green" />

    <EditText
        android:id="@+id/add_host_enter_password_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/text_design"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_host_enter_hostadress_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@layout/text_design"
            android:hint="@string/enter_hostname_hint"
            android:minHeight="50dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/add_host_enter_port_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@layout/text_design"
            android:hint="@string/enter_port_hint"
            android:inputType="number"
            android:minHeight="50dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green" />
    </LinearLayout>

    <Button
        android:id="@+id/add_host_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:background="@color/black"
        android:hint="@string/add_host_button_text"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:paddingLeft="5dp"
        android:textColorHint="@color/green"
        android:textSize="18sp" />

</LinearLayout>