<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".QuickConnectActivity"
    android:padding="10dp" >

    <EditText
        android:id="@+id/enter_username_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/text_design"
        android:hint="@string/enter_username_hint"
        android:minHeight="50dp"
        android:textColorHint="@color/green" 
        android:textColor="@color/green" />

    <EditText
        android:id="@+id/enter_password_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/text_design"
        android:hint="@string/enter_password_hint"
        android:minHeight="50dp"
        android:textColorHint="@color/green" 
        android:textColor="@color/green"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/enter_hostname_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@layout/text_design"
            android:hint="@string/enter_hostname_hint"
            android:minHeight="50dp"
            android:textColorHint="@color/green"
            android:textColor="@color/green" 
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/enter_port_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@layout/text_design"
            android:hint="@string/enter_port_hint"
            android:minHeight="50dp"
            android:textColorHint="@color/green"
            android:textColor="@color/green" 
            android:inputType="number" />
    </LinearLayout>
    
    <Button
        android:id="@+id/connect_server_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:background="@color/black"
        android:hint="@string/connect_server_button_text"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:paddingLeft="5dp"
        android:textColorHint="@color/green"
        android:textSize="18sp" />

</LinearLayout>