<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".QuickConnectActivity" >

    <ScrollView
        android:id="@+id/read_message_scroll"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/read_message_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/send_message_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@layout/text_design"
            android:hint="@string/send_message_hint"
            android:textColorHint="@color/green"
            android:textColor="@color/green" 
            android:layout_marginLeft="10dp"
            android:inputType="textNoSuggestions|textVisiblePassword"/>

        <Button
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/send_message_button_text"
            android:textColorHint="@color/green"
            android:background="@color/black" 
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"/>
        
        <Button
            android:id="@+id/send_message_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/send_ctrlc_button_text"
            android:textColorHint="@color/green"
            android:background="@color/black" 
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"/>

    </LinearLayout>

</LinearLayout>